setup color variable, css, js, third party

--- a/app/scss/_colors.scss
+++ b/app/scss/_colors.scss
@@ -1,4 +1,14 @@
-$white: #ffffff;
 $black: #000000;
-$dkGray: #303030;
-$ltGray: #cecece;
+$white: #ffffff;
+$gray: #525252;
+$primary-blue: #61bbff;
+$secondary-blue: #aadafe;
+$tertiary-blue: #e6f4ff;
+$primary-yellow: #ffcd00;
+$secondary-yellow: #f7db87;
+$tertiary-yellow: #fff0b3;
+$primary-green: #72a61b;
+$secondary-green: #d5e4bb;
+$text-green: #3a5c02;
+$text-yellow: #957800;
+$text-blue: #5e96bf;
