Create toggle function for marker info

--- a/app/scss/_colors.scss
+++ b/app/scss/_colors.scss
@@ -1,6 +1,9 @@
 $black: #000000;
+$secondary-black: #333333;
 $white: #ffffff;
 $gray: #525252;
+$lite-gray: #d5d5d5;
+$secondary-gray: #a3a3a3;
 $primary-blue: #61bbff;
 $secondary-blue: #aadafe;
 $tertiary-blue: #e6f4ff;
