--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,6 +1,7 @@
 html {
   box-sizing: border-box;
   font-size: 100%;
+  height: 100%;
 }
 
 *,
@@ -10,9 +11,226 @@ html {
 }
 
 body {
+  height: 100%;
   margin: 0;
-	padding: 0;  
+  padding: 0;
   color: $black;
   font-family: "Roboto", sans-serif;
   line-height: 1.3;
+}
+main {
+  height: calc(100% - 93px);
+}
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.bg-yellow {
+  background-color: $primary-yellow;
+}
+.title {
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 140.62%;
+  color: $black;
+  margin: 0;
+}
+.text {
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 140.62%;
+  color: $black;
+  margin: 0;
+}
+.sub-nav {
+  width: 100%;
+  padding: 13.5px 5px;
+  text-align: center;
+}
+.wrapper {
+  position: relative;
+  &--select {
+    margin-right: 15px;
+    display: flex;
+    flex: 1 1 auto;
+  }
+}
+.section {
+  height: 100%;
+  position: relative;
+  z-index: 0;
+}
+.map-wrapper {
+  height: 100%;
+}
+.map {
+  height: 100%;
+  width: 100%;
+}
+.form {
+  &--float {
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    right: 15px;
+    z-index: 1;
+  }
+  .form-group {
+    display: flex;
+    justify-content: space-between;
+    .wrapper {
+      .dropdown {
+        .btn--white {
+          .fa-map-marked-alt {
+            margin-right: 9.5px;
+          }
+          .fa-chevron-down {
+            color: $secondary-gray;
+          }
+        }
+      }
+    }
+  }
+  .form-select {
+    background-image: url("../app/img/select-down.png");
+    background-size: 17px 11px;
+    border: 1px solid $lite-gray;
+    box-sizing: border-box;
+    border-radius: 4px;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 140.62%;
+    color: $secondary-black;
+    &:focus {
+      border: 2px solid $lite-gray;
+      box-shadow: none;
+    }
+  }
+}
+.card {
+  background: $white;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 4px;
+  padding: 10px;
+  &--bottom {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    right: 10px;
+		&.active {
+			.card-header {
+				.action--toggle {
+					.icon--toggle {
+						transform: rotate(180deg);						
+					}
+					.text {						
+						&--show {
+							display: block;
+						}
+						&--hide {
+							display: none;
+						}
+					}
+				}
+			}
+			.card-body {
+				display: none;
+			}
+		}
+  }
+  .card-header {
+    padding: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 0 12px;
+    .action--toggle {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      .icon--toggle {
+        margin-right: 10px;
+        font-weight: bold;
+        color: $gray;
+        transform: rotate(0deg);
+      }
+      .text {
+        color: $gray;
+				&--show {
+					display: none;
+				}
+				&--hide {
+					display: block;
+				}
+      }
+    }
+  }
+  .card-body {
+    padding: 0;
+		display: block;
+		height: 100%;
+  }
+}
+.box {
+  width: 20px;
+  height: 20px;
+  display: block;
+  margin-right: 5px;
+  &--tertiary {
+    background-color: $tertiary-yellow;
+  }
+  &--secondary {
+    background-color: $secondary-yellow;
+  }
+  &--primary {
+    background-color: $primary-yellow;
+  }
+}
+.list {
+  &__item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 0 15px;
+    &:last-child {
+      margin: 0;
+    }
+    .wrapper--item {
+      display: flex;
+      align-items: center;
+    }
+  }
+}
+.checkbox-wrapper {
+  .label-checkbox {
+    .form-checkbox {
+      display: none;
+      &:checked ~ .custom-checkbox {
+        background-color: $primary-green;
+        border: 1px solid $primary-green;
+        .icon--check {
+          display: block;
+        }
+      }
+    }
+    .custom-checkbox {
+      width: 16px;
+      height: 16px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: $white;
+      border: 1px solid $black;
+      box-sizing: border-box;
+      border-radius: 2px;
+      .icon--check {
+        font-size: 12px;
+        font-weight: bold;
+        color: $white;
+        display: none;
+      }
+    }
+  }
 }
