--- a/app/scss/_typography.scss
+++ b/app/scss/_typography.scss
@@ -1,28 +1,42 @@
-h1, h2, h3 {
-    font-weight: 700;
-    margin-top: 0px;
+h1,
+h2,
+h3 {
+  font-weight: 700;
+  margin-top: 0px;
 }
 
 h1 {
-    font-size: 2rem;
+  font-size: 2rem;
 
-    @media #{$mq-1000-up}{
-        font-size: 3rem;
-    }
+  @media #{$mq-1000-up} {
+    font-size: 3rem;
+  }
 }
 
 h2 {
-    font-size: 1.5rem;
+  font-size: 1.5rem;
 
-    @media #{$mq-1000-up}{
-        font-size: 2rem;
-    }
+  @media #{$mq-1000-up} {
+    font-size: 2rem;
+  }
 }
 
 h3 {
-    font-size: 1.25rem;
+  font-size: 1.25rem;
 
-    @media #{$mq-1000-up}{
-        font-size: 1.5rem;
-    }
+  @media #{$mq-1000-up} {
+    font-size: 1.5rem;
+  }
+}
+@mixin main-title {
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 140.62%;
+  color: $black;
+}
+@mixin text {
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 140.62%;
+  color: $black;
 }
