--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -60,6 +60,7 @@ ul {
   height: 100%;
   position: relative;
   z-index: 0;
+	overflow: auto;
 }
 .map-wrapper {
   height: 100%;
@@ -113,6 +114,7 @@ ul {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 4px;
   padding: 10px;
+	z-index: 1;
   &--bottom {
     position: absolute;
     bottom: 10px;
@@ -221,6 +223,7 @@ ul {
       display: flex;
       align-items: center;
       justify-content: center;
+			flex: 0 0 auto;
       background-color: $white;
       border: 1px solid $black;
       box-sizing: border-box;
