--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -19,7 +19,9 @@ body {
   line-height: 1.3;
 }
 main {
-  height: calc(100% - 93px);
+  height: calc(100% - 50px);
+  display: flex;
+  flex-direction: column;
 }
 ul {
   list-style: none;
@@ -61,6 +63,10 @@ ul {
   position: relative;
   z-index: 0;
 	overflow: auto;
+  &--alert {
+    height: auto;
+    overflow: hidden;
+  }
 }
 .map-wrapper {
   height: 100%;
@@ -94,7 +100,7 @@ ul {
     }
   }
   .form-select {
-    background-image: url("../app/img/select-down.png");
+    background-image: url("../dist/img/select-down.png");
     background-size: 17px 11px;
     border: 1px solid $lite-gray;
     box-sizing: border-box;
