--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -17,16 +17,67 @@ body {
   color: $black;
   font-family: "Roboto", sans-serif;
   line-height: 1.3;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  &::after {
+    background-color: transparent;
+    height: 0%;
+    @include for-size(desktop) {
+      background-color: #f5f6f8;
+      height: 35%;
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      z-index: -1;
+    }
+  }
 }
 main {
   height: calc(100% - 50px);
   display: flex;
   flex-direction: column;
+  background: $white;
+  margin: 0 auto;
+  width: 100%;
+  box-shadow: none;
+  padding: 0;
+
+  @include for-size(desktop) {
+    width: 50%;
+    box-shadow: 0px 4px 16px rgb(0 0 0 / 25%);
+    padding: 30px;
+  }
 }
 ul {
   list-style: none;
   padding: 0;
   margin: 0;
+}
+.main-navbar {
+  background-color: transparent;
+}
+.navbar-brand {
+  height: 36px;
+  width: 174px;
+  margin: 15px 0;
+  overflow: hidden;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: 0 0 auto;
+  @include for-size(desktop) {
+    height: 66px;
+    width: 294px;
+    margin: 24px 0;
+  }
+  .img-fluid {
+    height: 100%;
+    object-fit: cover;
+  }
 }
 .bg-yellow {
   background-color: $primary-yellow;
@@ -80,6 +131,10 @@ ul {
   &--alert {
     height: auto;
     overflow: hidden;
+    margin: 0;
+    @include for-size(desktop) {
+      margin: 0 0 15px;
+    }
   }
 }
 .map-wrapper {
@@ -148,6 +203,11 @@ ul {
     }
   }
 }
+.row {
+  &--list {
+    margin: 0 -5px;
+  }
+}
 .card {
   background: $white;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -157,7 +217,8 @@ ul {
   &--list {
     padding: 5px;
     box-shadow: none;
-    margin-bottom: 15px;
+    width: calc(100% - 15px);
+    margin: 0 auto 15px;
     .title {
       line-height: 125%;
     }
@@ -329,7 +390,7 @@ ul {
           font-size: 10px;
           line-height: 125%;
           z-index: 1;
-        }        
+        }
       }
       .progress-bar {
         z-index: 0;
