--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -48,7 +48,7 @@ main {
   @include for-size(desktop) {
     width: 50%;
     box-shadow: 0px 4px 16px rgb(0 0 0 / 25%);
-    padding: 30px 15px;
+    padding: 30px;
   }
 }
 ul {
@@ -111,7 +111,7 @@ ul {
   margin: 0;
   @include for-size(desktop) {
     padding: 8px 5px;
-    margin: 0 15px;
+    margin: 0 0 15px;
   }
 }
 .wrapper {
@@ -157,6 +157,8 @@ ul {
 }
 .map-wrapper {
   height: 100%;
+  width: 100%;
+  margin: 0;  
 }
 .map {
   height: 100%;
