--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -181,6 +181,21 @@ ul {
     justify-content: center;
     flex: 1 1 auto;
   }
+  &--index {
+    ul {
+      margin-top: 20px;
+      li {
+        margin: 0 0 10px;
+        a {
+          text-decoration: none;
+          color: $primary-green;
+          font-weight: bold;
+          font-size: 16px;
+          line-height: 140%;
+        }
+      }
+    }
+  }
 }
 .map-wrapper {
   height: 100%;
