--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -44,11 +44,12 @@ main {
   width: 100%;
   box-shadow: none;
   padding: 0;
+  overflow: hidden;
 
   @include for-size(desktop) {
     width: 60%;
     box-shadow: 0px 4px 16px rgb(0 0 0 / 25%);
-    padding: 30px;
+    padding: 15px;
   }
 }
 ul {
@@ -70,13 +71,17 @@ ul {
   justify-content: center;
   flex: 0 0 auto;
   @include for-size(desktop) {
-    height: 66px;
-    width: 294px;
+    height: 54px;
     margin: 24px 0;
+    width: 245px;    
   }
   .img-fluid {
     height: 100%;
-    object-fit: cover;
+    image-rendering: auto;
+    image-rendering: crisp-edges;
+    image-rendering: pixelated;
+    /* Safari seems to support, but seems deprecated and does the same thing as the others. */
+    image-rendering: -webkit-optimize-contrast;
   }
 }
 .bg-yellow {
@@ -89,10 +94,10 @@ ul {
   color: $black;
   margin: 0;
   @include for-size(tablet) {
-    font-size: 16px;    
+    font-size: 16px;
   }
   @include for-size(desktop) {
-    font-size: 20px;    
+    font-size: 20px;
   }
 }
 .text {
@@ -103,11 +108,9 @@ ul {
   margin: 0;
   @include for-size(tablet) {
     font-size: 16px;
-    
   }
   @include for-size(desktop) {
     font-size: 20px;
-    
   }
 }
 .sub-nav {
@@ -196,27 +199,40 @@ ul {
       }
     }
   }
+  &--list {
+    display: flex;
+    flex-direction: column;
+  }
 }
 .map-wrapper {
   height: 100%;
   width: 100%;
-  margin: 0;  
+  margin: 0;
 }
 .map {
   height: 100%;
   width: 100%;
 }
+.container-list {
+  background-color:#F9F9F9;
+  overflow: auto;
+}
 .form {
-  padding: 15px;
+  padding: 15px;  
   &:last-child {
     padding-top: 10px;
-  }
+  }  
   &--float {
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     z-index: 1;
+  }
+  &--list {
+    background-color: #F9F9F9;
+    display: flex;
+    flex-direction: column;
   }
   .form-group {
     display: flex;
@@ -226,7 +242,7 @@ ul {
         height: 100%;
         .btn--white {
           height: 100%;
-          .icon--view {            
+          .icon--view {
             color: $black;
           }
           .fa-chevron-down {
@@ -276,7 +292,7 @@ ul {
 }
 .row {
   &--list {
-    margin: 0 -5px;
+    margin: 0 -5px;    
   }
 }
 .card {
@@ -359,7 +375,8 @@ ul {
     padding: 0;
     display: flex;
     justify-content: space-between;
-    align-items: center;    
+    align-items: center;
+    background-color: $white;
     .action--toggle {
       display: flex;
       align-items: center;
@@ -553,13 +570,13 @@ ul {
     display: flex;
     align-items: center;
     flex: 0 0 auto;
-    .text {      
+    .text {
       font-weight: normal;
       font-size: 16px;
       line-height: 140.62%;
       color: $secondary-black;
       display: none;
-      @include for-size(tablet) {        
+      @include for-size(tablet) {
         display: block;
       }
       @include for-size(desktop) {
@@ -589,7 +606,7 @@ ul {
     }
     i.fa-chevron-down {
       color: $black;
-      margin-left: 9.5px;            
+      margin-left: 9.5px;
     }
   }
   .dropdown-menu {
@@ -598,6 +615,9 @@ ul {
       font-size: 16px;
       line-height: 140.62%;
       color: $black;
+      &:active {
+        background-color: #e9ecef;
+      }
       @include for-size(desktop) {
         font-size: 20px;
         line-height: 140.62%;
