Adding vaccination buses

--- a/app/scss/_colors.scss
+++ b/app/scss/_colors.scss
@@ -12,6 +12,7 @@ $secondary-yellow: #f7db87;
 $tertiary-yellow: #fff0b3;
 $primary-green: #72a61b;
 $secondary-green: #d5e4bb;
+$emerald-green: #52d088;
 $text-green: #3a5c02;
 $text-yellow: #957800;
 $text-blue: #5e96bf;
