--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -212,6 +212,25 @@ ul {
 .map {
   height: 100%;
   width: 100%;
+  .gm-ui-hover-effect {
+    display: none !important;
+  }
+  .card--list {
+    width: 176px;
+    padding: 0;
+    margin: 0;
+    border: none;
+    .title {
+      font-size: 12px;
+      line-height: 140.62%;
+      flex: 1 1 auto;
+    }
+    .text {
+      font-size: 12px;
+      line-height: 140.62%;
+      flex: 0 0 auto;
+    }
+  }
 }
 .container-list {
   background-color:#F9F9F9;
