--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -61,19 +61,48 @@ ul {
   background-color: transparent;
 }
 .navbar-brand {
-  height: 36px;
-  width: 174px;
-  margin: 15px 0;
   overflow: hidden;
   padding: 0;
   display: flex;
   align-items: center;
   justify-content: center;
   flex: 0 0 auto;
-  @include for-size(desktop) {
-    height: 54px;
-    margin: 24px 0;
-    width: 245px;
+  position: relative;
+  &::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    border-right: 3px solid #E8E8E8;
+    height: 100%;
+  }
+  &:last-child {
+    &::after {
+      border-right: none;
+    }
+  }
+  &.first {
+    height: 36px;
+    width: 174px;
+    margin: 15px 0;
+    padding-right: 15px;
+    margin-right: 15px;
+    @include for-size(desktop) {
+      height: 54px;
+      margin: 24px 15px 24px 0;
+      width: 245px;
+    }
+  }
+  &.second {
+    height: 40px;
+    width: 88px;
+    margin: 15px 0;    
+    @include for-size(desktop) {
+      height: 60px;
+      margin: 24px 0;
+      width: 130px;
+    }
   }
   .img-fluid {
     height: 100%;
